Name:	    htn-translation	
Version:	0.2
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:	BSD3
License-File:	LICENSE
Author:		Ron Alford
Homepage:	https://github.com/ronwalf/HTN-Translation
Category:	AI
Synopsis:	A library for translating HTNs into PDDL domains


Executable htntranslate 
    Main-Is: htntranslate.hs
    Build-Depends:
    Hs-Source-Dirs: src
    GHC-Options:
        -O
    other-modules: HTNTranslation.HTNProblemLift

Library
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.2.0.0 && < 0.5,
        parsec >= 2.1.0.1 && < 4,
        pretty >= 1.0.1.0 && < 2,
        mtl >= 1 && < 3,
        syb >= 0.1 && < 0.4,
        planning >= 0.2 && < 0.3 
  Exposed-modules:HTNTranslation.HTNPDDL, HTNTranslation.Translation, HTNTranslation.Typing
  Hs-Source-Dirs: src
  ghc-options:
        -O -Wall
  other-modules: HTNTranslation.HTNProblemLift


