Name:	    htn-translation	
Version:	0.2
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:	BSD3
License-File:	LICENSE
Author:		Ron Alford <ronwalf@volus.net>
Maintainer:     Ron Alford <ronwalf@volus.net>
Homepage:	https://github.com/ronwalf/HTN-Translation
Category:	AI
Synopsis:	A library for translating HTNs into PDDL domains
Description:    HTNTranslation is a program for translating Hierarchical Task Network problems into PDDL.  This is an extension of the work described in "Translating HTNs to PDDL," handling both totally ordered and partially ordered subtasks.

source-repository head
    type:   git
    location: git://github.com/ronwalf/HTN-Translation.git
    branch: master

source-repository this
    type:   git
    location: git://github.com/ronwalf/HTN-Translation.git
    tag: release-0.2



Library
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.2.0.0,
        parsec >= 3,
        pretty >= 1.0.1.0,
        mtl >= 1,
        syb >= 0.1,
        planning >= 0.2 
  Exposed-modules:HTNTranslation.HTNPDDL, HTNTranslation.CETranslation, HTNTranslation.Translation, HTNTranslation.Typing, HTNTranslation.ProblemLifter, HTNTranslation.ProgressionBounds
  Hs-Source-Dirs: src
  GHC-Options: -Wall

Executable htntranslate 
    Main-Is: htntranslate.hs
    Build-Depends:
        base >= 4 && < 5,
        containers >= 0.2.0.0,
        parsec >= 3,
        pretty >= 1.0.1.0,
        planning >= 0.2,
        mtl >= 1,
        htn-translation
    Hs-Source-Dirs: src-cmdline
    GHC-Options: -Wall


