Name:		HTNTranslation
Version:	0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:	BSD3
License-File:	LICENSE
Author:		Ron Alford
Homepage:	http://www.cs.umd.edu/~ronwalf/software/planning/
Category:	AI
Synopsis:	A library for translating HTNs into PDDL domains

Executable htntranslate 
    Main-Is: htntranslate.hs
    Build-Depends:
        base >= 4 && < 5,
        parsec >= 2.1.0.1 && < 3
    GHC-Options:
        -O

Library
  Build-Depends:
        base >= 4 && < 5,
        syb >= 0.1 && < 0.3,
        parsec >= 2.1.0.1 && < 3,
        pretty >= 1.0.1.0 && < 2,
        containers >= 0.2.0.0 && < 0.5,
        Planning == 0.1
  Exposed-modules:
        HTNTranslation.HTNPDDL, HTNTranslation.TranslationOpt
  ghc-options:
        -O -Wall


